use "Double.valueOf(" and no longer "new Double(" use "Integer.valueOf(" and no longer "new Integer(" use "InputEvent.CTRL_DOWN_MASK" and no longer "InputEvent.CTRL_MASK" use "InputEvent.SHIFT_DOWN_MASK" and no longer "InputEvent.SHIFT_MASK" new PDF template added: "ED4 Ulisses Char"